--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ aiofiles = "^0.4.0"
 aiohttp = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^5.3.3"
+pytest-asyncio = "^0.10.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
