--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["zuqq <noahheld17@gmail.com>"]
 python = "^3.8"
 aiofiles = "^0.4.0"
 aiohttp = "^3.6.2"
+docopt = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.3"
