--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,9 @@ docopt = "^0.6.2"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pylint.messages_control]
+disable = "C0330, C0326"
+
+[tool.pylint.format]
+max-line-length = "88"
