--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "surge"
 version = "0.1.0"
-description = ""
-authors = ["zuqq <noahheld17@gmail.com>"]
+description = "Download files from the BitTorrent network."
+authors = ["zuqq"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
