--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["zuqq"]
 [tool.poetry.dependencies]
 python = "^3.8"
 docopt = "^0.6.2"
+uvloop = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 
