--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/pyproject.toml') }}
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/pyproject.toml') }}
       - name: Install dependencies
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install -n --no-root
